Improve directshowvideosink. See https://bugzilla.gnome.org/show_bug.cgi?id=579926

git-svn-id: http://ossbuild.googlecode.com/svn/trunk@437 72a73a14-1cf0-11de-a027-6f5b8e30e268