Main/GStreamer/Source/gst-plugins-bad/sys/dshowvideosink/dshowvideosink.h
@@ -21,7 +21,7 @@
 #define __DSHOWVIDEOSINK_H__
 
 #include <gst/gst.h>
-#include <gst/base/gstbasesink.h>
+#include <gst/video/gstvideosink.h>
 
 #include "dshowvideofakesrc.h"
 
@@ -45,6 +45,7 @@ typedef struct _GstDshowVideoSinkClass GstDshowVideoSinkClass;
 class RendererSupport
 {
 public:
+  virtual ~RendererSupport() {};
   virtual const char *GetName() = 0;
   virtual IBaseFilter *GetFilter() = 0;
   virtual gboolean Configure() = 0;
@@ -57,7 +58,7 @@ public:
 
 struct _GstDshowVideoSink
 {
-  GstBaseSink sink;
+  GstVideoSink sink;
 
   /* Preferred renderer to use: VM9 or VMR */
   char *preferredrenderer;
@@ -86,6 +87,7 @@ struct _GstDshowVideoSink
   HWND window_id;
 
   gboolean connected;
+  gboolean graph_running;
 
   /* If we create our own window, we run it from another thread */
   GThread *window_thread;
@@ -99,7 +101,7 @@ struct _GstDshowVideoSink
 
 struct _GstDshowVideoSinkClass
 {
-  GstBaseSinkClass parent_class;
+  GstVideoSinkClass parent_class;
 };
 
 GType gst_dshowvideosink_get_type (void);
